# sd-dynamic-prompts

./: .eslintrc.js  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  LICENSE  README.md  SYNTAX.md  dynamic_prompting.py  helptext.html  install.py  jinja2.md  jinja_help.html  package.json  pyproject.toml  requirements.txt  style.css
.github/: CONTRIBUTING.md
_tools/: download_collections.py  import_noodle_soup_prompts.py  repositories.json
collections/: publicprompts.yaml
config/: magicprompt_models.txt
docs/: CHANGELOG.md  SYNTAX.md  resources.md  tutorial.md
javascript/: dynamic_prompting.js  dynamic_prompting_hints.js  treeview.js
prompts/: constants.py  consts.py  dummy_attention_generator.py  generator_builder.py  prompt_writer.py  uicreation.py  utils.py  wildcardfile.py  wildcardmanager.py
scripts/: .dynamic_prompting.py.swo  .dynamic_prompting.py.swp  api.py  dynamic_prompting.py
sd_dynamic_prompts/: __init__.py  attention_generator.py  callbacks.py  consts.py  dynamic_prompting.py  element_ids.py  frozenprompt_generator.py  generator_builder.py  health_check.py  helpers.py  magic_prompt.py  paths.py  pnginfo_saver.py  prompt_writer.py  settings.py  special_syntax.py  utils.py  version_tools.py  wildcards_tab.py
tests/: conftest.py  test_paths.py  test_script.py
ui/: constants.py  save_params.py  settings.py  wildcards_tab.py
wildcards/: 3d-terms.txt  NSFW-my.txt  NSFW.txt  accetc.txt  acceye.txt  accnip.txt  adj-architecture.txt  adj-beauty.txt  adj-general.txt  adj-horror.txt  animals.txt  arm.txt  artist-my.txt  (+149 more)
(+1791 files in other folders)
